--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
-title: TrentL-Port
-description: Bookmark this page for update posts.
+ jekyll-theme-minimal
+ TrentL-Port
+ Bookmark this page for update posts.
