--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+theme: jekyll-theme-minimal
+title: Octocat's homepage
+description: Bookmark this to keep an eye on my project updates!
+ 
  jekyll-theme-minimal
  TrentL-Port
  Bookmark this page for update posts.
