--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
- 
- jekyll-theme-minimal
- TrentL-Port
- Bookmark this page for update posts.
+tile: TrentL-Port
+description: Bookmark this page for update posts.
