--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-minimal
+theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: TrentL-Port
 description: Bookmark this page for update posts.
+logo: image/
