--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme
 title: TrentL-Port
 description: Bookmark this page for update posts.
-logo: image/
+logo: image/"C:\Users\Landsberger\Pictures\fish.png"
