--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: TrentL-Port
+title: TrentL-Portfolio
 description: Bookmark this page for update posts.
-logo: image/"C:\Users\Landsberger\Pictures\fish.png"
+logo: image\"C:\Users\Landsberger\Pictures\fish.png"
