--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme
 title: TrentL-Portfolio
 description: Bookmark this page for update posts.
-logo: image\"C:\Users\Landsberger\Pictures\fish.png"
+logo: "C:\Users\Landsberger\Pictures\fish.png"
